<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemInfo"
    android:orientation="vertical">

    <!-- ACTION BAR CON ICONO DE VOLVER ATRAS Y TITULO DE LA INTERFAZ -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red_600"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/returnBackIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/returnback"
                android:layout_marginStart="-5dp"
                android:layout_alignParentStart="true"
                >
            </ImageView>

            <TextView
                android:id="@+id/titleApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="-5dp"
                android:fontFamily="@font/silkscreen"
                android:text="@string/ItemInfo"
                android:textAlignment="center"
                android:textSize="30sp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <!-- CONTENEDOR DE LA INFORMACION DEL ITEM -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        app:contentPadding="10dp"
        >
        <!-- VISTA SCROLL SI LA INFORMACION LLEGA A SER BASTANTE -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- IMAGEN DEL ITEM - POR DEFECTO TIENE LA DE UNA POKEBALL -->
                <ImageView
                    android:id="@+id/itemImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pokeball_icon"
                    />

                <!-- NOMBRE DEL ITEM -->
                <TextView
                    android:id="@+id/itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ItemName"
                    android:fontFamily="@font/silkscreen"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_margin="25dp"
                    />

                <!-- EFECTO DEL ITEM -->
                <TextView
                    android:id="@+id/titleItemEffect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Description"
                    android:fontFamily="@font/silkscreen"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_margin="25dp"
                    />
                <TextView
                    android:id="@+id/itemEffect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/silkscreen"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_margin="15dp"
                    />

                <!-- PRECIO DEL ITEM EN EL JUEGO -->
                <TextView
                    android:id="@+id/titleCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/silkscreen"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:text="@string/Cost"
                    android:layout_margin="20dp"
                    />

                <!-- CONTENEDOR DEL PRECIO-->

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:contentPadding="15dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginBottom="15dp">
                    <TextView
                        android:id="@+id/itemCost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/silkscreen"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>